Grace/tests/gibbs/errors/t037.grace
// ERROR = P1021
var a := object
